TrueDark: Make sure SpinButton text is legible

--- a/templates/TrueDark/gtk-3.0/gtk-widgets.css
+++ b/templates/TrueDark/gtk-3.0/gtk-widgets.css
@@ -1161,7 +1161,11 @@ switch:checked {
 }
 
 spinbutton > button {
-	padding: 4px 4px;
+	padding: 1em;
+}
+
+spinbutton progress {
+	background: @entryselbg-color;
 }
 
 radiobutton > label, checkbutton > label {
